add get test case
