# Backend/docs/swagger.yaml
@@ -213,7 +213,6 @@ definitions:
         type: boolean
     required:
     - expected_output
-    - input_data
     type: object
   routes.ProblemAttemptRequest:
     properties:
@@ -766,6 +765,44 @@ paths:
       tags:
       - ProblemAttempts
   /api/problems/{problem_id}/testcases:
+    get:
+      description: Retrieve all test cases for a specific problem
+      parameters:
+      - description: Problem ID
+        in: path
+        name: problem_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.TestCase'
+            type: array
+        "400":
+          description: Invalid problem ID
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "404":
+          description: Problem not found
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get test cases for a problem
+      tags:
+      - TestCases
     post:
       consumes:
       - application/json
